samples/_failures_safe/1761288647_dae460_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61f69b49.c: In function ‘main’:
./samples/SAFE/__tmp_61f69b49.c:159:5: error: expected declaration or statement at end of input
  159 |     printf("Tokens found: %d\n", token_count);
      |     ^~~~~~
